--- a/examples/css/demo/styles.scss
+++ b/examples/css/demo/styles.scss
@@ -15,6 +15,7 @@
 // Mootor plugins
 @import "mootor.nav";
 @import "mootor.ui";
+@import "mootor.sprites";
 
 // General
 @import "base/shared/layout";
